--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ address: "Room 140, Tom&aacute;s Rivera Library, 900 University Ave., Riverside,
 country: "us"      # lowercase two-letter ISO country code such as "fr" (see https://en.wikipedia.org/wiki/ISO_3166-1)
 language: "en"     # lowercase two-letter ISO language code such as "fr" (see https://en.wikipedia.org/wiki/ISO_639-1)
 latlng: "33.972643, -117.327482"       # decimal latitude and longitude of workshop venue (e.g., "41.7901128,-87.6007318" - use http://www.latlong.net/)
-humandate: "December 14-15 & 21-22, 2017 (9am - noon each day)"    # human-readable dates for the workshop (e.g., "Feb 17-18, 2020")
-humantime: "9:00 am - noon"    # human-readable times for the workshop (e.g., "9:00 am - 4:30 pm")
+humandate: "December 14-15 & 21-22, 2017"    # human-readable dates for the workshop (e.g., "Feb 17-18, 2020")
+humantime: "9:00 am - 12:00 noon"    # human-readable times for the workshop (e.g., "9:00 am - 4:30 pm")
 startdate: 2017-12-14      # machine-readable start date for the workshop in YYYY-MM-DD format like 2015-01-01
 enddate: 2017-12-22        # machine-readable end date for the workshop in YYYY-MM-DD format like 2015-01-02
 instructor: ["Kat Koziar"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
